@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Support QueryByShape() with point and line geometries (#3248)
+
 - Honour MAXSIZE for WCS responses (#3204)
 
 - Implemented RFC 52 LayerResultsGetShape support for OGR connection type.
